--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "@next/mdx": "^15.2.2",
     "@types/mdx": "^2.0.13",
     "d3": "^7.9.0",
+    "katex": "^0.16.21",
     "next": "^15.2.2",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-latex": "^2.0.0",
+    "rehype-class-names": "^2.0.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-mathjax": "^7.1.0",
     "rehype-prism-plus": "^2.0.0",
     "remark": "^15.0.1",
     "remark-frontmatter": "^5.0.0",
-    "remark-mdx": "^3.1.0"
+    "remark-math": "^6.0.0",
+    "remark-mdx": "^3.1.0",
+    "three": "^0.174.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
